# model-serving-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.yaml  compose.yaml  noxfile.py  pyproject.toml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: main.yml
docs/: deployment_guide.md
src/model_serving_platform/: __init__.py  main.py
src/model_serving_platform/api/: __init__.py  app.py
src/model_serving_platform/api/middleware/: __init__.py  request_context.py
src/model_serving_platform/api/routes/: __init__.py  health.py  metadata.py  metrics.py  predictions.py
src/model_serving_platform/application/: inference_runtime.py  prediction_service.py  service_state.py
src/model_serving_platform/config/: __init__.py  settings.py
src/model_serving_platform/domain/: __init__.py  health.py  metadata.py  prediction.py
src/model_serving_platform/infrastructure/: __init__.py
test_scripts/: verify_docker_api.py
tests/: bundle_test_data.py  conftest.py  test_bundle_loader.py  test_external_enrichment_client.py  test_graphsage_runtime.py  test_health_endpoints.py  test_local_file_cache.py  test_main_entrypoint.py  test_metadata_endpoint.py  test_metrics_endpoint.py  test_prediction_endpoints.py  test_prediction_service.py  test_pytorch_encoder.py  test_request_context_middleware.py  test_runtime_injection.py  test_service_metrics.py  test_smoke_happy_path.py  test_structured_logging.py  test_template_scaffolding.py
tests/fakes/: __init__.py  fake_inference_runtime.py
(+17 files in other folders)
