[project]
name = "REPLACE_WITH_PROJECT_NAME"
version = "0.1.0"
description = "REPLACE_WITH_ONE_SENTENCE_DESCRIPTION"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.4.0",
    "pre-commit>=4.0.0",
    "nox>=2024.4.15",
    "mypy>=1.10.0",
    "bandit>=1.7.9",
    "typing-extensions",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.mypy]
strict = true


