[project]
name = "model-serving-platform"
version = "0.1.0"
description = "Model serving platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
model-serving-platform = "model_serving_platform.main:run"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.4.0",
    "pre-commit>=4.0.0",
    "nox>=2024.4.15",
    "mypy>=1.10.0",
    "bandit>=1.7.9",
    "typing-extensions",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.mypy]
strict = true


